update : iOS header adjustment. Fixing overlap header to hardware

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -34,3 +34,7 @@ ion-title {
 .text-center {
     text-align: center;
 }
+
+ion-navbar {
+    margin-top: 25px;
+}
